--- a/NotifyOs.ipynb
+++ b/NotifyOs.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,12 @@
     "if hora >= 8 or hora <= 22:\n",
     "    oi = bomdia(hora)\n",
     "        \n",
-    "    username = \"luiz.evangelista@se77e.com.br\"\n",
-    "    password = \"77@A7net@#L\"\n",
+    "    username = \"noc@se77e.com.br\"\n",
+    "    password = \"38O1rrz?\"\n",
     "\n",
     "\n",
-    "    tok = \"5456848966:AAGlJ8AQxKe-CgHr9qW_U48p25a8g78ErXo\"\n",
-    "    i = \"-751440787\"\n",
+    "    tok = \"2038213127:AAEHfqzx9H7zFA8BheGLqnCb-7jx_ixGB_U\"\n",
+    "    i = \"-1001719488484\"\n",
     "    bot = telebot.TeleBot(tok)\n",
     "\n",
     "\n",
@@ -50,9 +50,7 @@
     "\n",
     "        res = msg.html\n",
     "        res = res.replace('E-mail:','\\\\nE-mail:',1)\n",
-    "\n",
-    "\n",
-    "        tex = f\"\"\"{oi} Recebemos uma nova OS no IXC.\"\"\"\n",
+    "        tex = f\"\"\"{oi} Recebemos uma nova OS no IXC. \\n Assunto:{msg.subject}\"\"\"\n",
     "\n",
     "        bot.send_message(i,tex)"
    ]
@@ -74,55 +72,6 @@
     "#                with open(\"CriarArquivo.xlsx\", \"wb\") as arquivo_excel:\n",
     "#                    arquivo_excel.write(informacoes_anexo)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'msg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmsg\u001b[49m\u001b[38;5;241m.\u001b[39mhtml)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(res\u001b[38;5;241m.\u001b[39mget_text())\n\u001b[1;32m      3\u001b[0m res \u001b[38;5;241m=\u001b[39m BeautifulSoup(msg\u001b[38;5;241m.\u001b[39mhtml)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'msg' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(msg.html)\n",
-    "print(res.get_text())\n",
-    "res = BeautifulSoup(msg.html)\n",
-    "print(res.get_text())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: beautifulsoup4 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (4.11.1)\r\n",
-      "Requirement already satisfied: soupsieve>1.2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from beautifulsoup4) (2.3.2.post1)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install beautifulsoup4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
