--- a/NotifyOs.ipynb
+++ b/NotifyOs.ipynb
@@ -18,60 +18,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bomdia(hour):\n",
-    "    if hour >= 8 and hour < 12:\n",
-    "        saud = \"Bom dia!\"\n",
-    "    elif hour >= 12 and hour < 18:\n",
-    "        saud = \"Boa Tarde!\"\n",
-    "    else:\n",
-    "        saud = \"Boa Noite!\"\n",
-    "    return saud\n",
+    "t=0\n",
+    "while(t<1):\n",
+    "    def bomdia(hour):\n",
+    "        if hour >= 8 and hour < 12:\n",
+    "            saud = \"Bom dia!\"\n",
+    "        elif hour >= 12 and hour < 18:\n",
+    "            saud = \"Boa Tarde!\"\n",
+    "        else:\n",
+    "            saud = \"Boa Noite!\"\n",
+    "        return saud\n",
     "\n",
     "\n",
-    "    \n",
-    "hora = int(time.strftime('%H', time.localtime()))\n",
-    "     \n",
-    "if hora >= 8 or hora <= 22:\n",
-    "    oi = bomdia(hora)\n",
-    "        \n",
-    "    username = \"noc@se77e.com.br\"\n",
-    "    password = \"38O1rrz?\"\n",
+    "                \n",
+    "    hora = int(time.strftime('%H', time.localtime()))\n",
+    "                \n",
+    "    if hora >= 8 or hora <= 22:\n",
+    "        oi = bomdia(hora)\n",
+    "                    \n",
+    "        username = \"luiz.evangelista@se77e.com.br\"\n",
+    "        password = \"77@A7net@#L\"\n",
     "\n",
     "\n",
-    "    tok = \"2038213127:AAEHfqzx9H7zFA8BheGLqnCb-7jx_ixGB_U\"\n",
-    "    i = \"-1001719488484\"\n",
-    "    bot = telebot.TeleBot(tok)\n",
+    "        tok = \"5456848966:AAGlJ8AQxKe-CgHr9qW_U48p25a8g78ErXo\"\n",
+    "        i = \"-751440787\"\n",
+    "        bot = telebot.TeleBot(tok)\n",
     "\n",
     "\n",
-    "    meu_email = MailBox('plesk.se77e.com.br').login(username, password)\n",
+    "        meu_email = MailBox('plesk.se77e.com.br').login(username, password)\n",
     "\n",
-    "    lista_emails= meu_email.fetch(AND(from_=\"info@settefibra.com.br\", seen=False))\n",
-    "    for msg in lista_emails:\n",
+    "        lista_emails= meu_email.fetch(AND(from_=\"info@settefibra.com.br\", seen=False))\n",
+    "        for msg in lista_emails:\n",
     "\n",
-    "        res = msg.html\n",
-    "        res = res.replace('E-mail:','\\\\nE-mail:',1)\n",
-    "        tex = f\"\"\"{oi} Recebemos uma nova OS no IXC. \\n Assunto:{msg.subject}\"\"\"\n",
+    "            res = msg.html\n",
+    "            res = res.replace('E-mail:','\\\\nE-mail:',1)\n",
+    "            tex = f\"\"\"{oi} Recebemos uma nova OS no IXC. \\n Assunto:{msg.subject}\"\"\"\n",
     "\n",
-    "        bot.send_message(i,tex)"
+    "            bot.send_message(i,tex)\n",
+    "            time.sleep(60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#pegar anexo\n",
-    "\n",
-    "#lista_emails = meu_email.fetch(AND(from_=\"plesk.se77e.com.br\"))\n",
-    "#for email in lista_emails:\n",
-    "#    if len(email.attachments) > 0:\n",
-    "#        for anexo in email.attachments:\n",
-    "#            if \"NomeAnexo\" in anexo.filename:\n",
-    "#                informacoes_anexo = anexo.payload\n",
-    "#                with open(\"CriarArquivo.xlsx\", \"wb\") as arquivo_excel:\n",
-    "#                    arquivo_excel.write(informacoes_anexo)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
