--- a/NotifyOs.ipynb
+++ b/NotifyOs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,60 +50,10 @@
     "\n",
     "        res = msg.html\n",
     "        res = res.replace('E-mail:','\\\\nE-mail:',1)\n",
-    "        tex = f\"\"\"{oi} Recebemos uma nova OS no IXC. \\n Assunto:{msg.subject}\"\"\"\n",
+    "        tex = f\"\"\"{oi} Recebemos uma nova OS no IXC. \\n{msg.subject}\"\"\"\n",
     "\n",
     "        bot.send_message(i,tex)\n",
     "        time.sleep(60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyTelegramBotAPI\n",
-      "  Downloading pyTelegramBotAPI-4.7.0.tar.gz (210 kB)\n",
-      "     -------------------------------------- 210.7/210.7 kB 3.2 MB/s eta 0:00:00\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Collecting requests\n",
-      "  Downloading requests-2.28.1-py3-none-any.whl (62 kB)\n",
-      "     ---------------------------------------- 62.8/62.8 kB ? eta 0:00:00\n",
-      "Collecting urllib3<1.27,>=1.21.1\n",
-      "  Downloading urllib3-1.26.12-py2.py3-none-any.whl (140 kB)\n",
-      "     -------------------------------------- 140.4/140.4 kB 4.2 MB/s eta 0:00:00\n",
-      "Collecting certifi>=2017.4.17\n",
-      "  Downloading certifi-2022.6.15-py3-none-any.whl (160 kB)\n",
-      "     -------------------------------------- 160.2/160.2 kB 3.2 MB/s eta 0:00:00\n",
-      "Collecting idna<4,>=2.5\n",
-      "  Downloading idna-3.3-py3-none-any.whl (61 kB)\n",
-      "     ---------------------------------------- 61.2/61.2 kB 3.2 MB/s eta 0:00:00\n",
-      "Collecting charset-normalizer<3,>=2\n",
-      "  Downloading charset_normalizer-2.1.1-py3-none-any.whl (39 kB)\n",
-      "Using legacy 'setup.py install' for pyTelegramBotAPI, since package 'wheel' is not installed.\n",
-      "Installing collected packages: urllib3, idna, charset-normalizer, certifi, requests, pyTelegramBotAPI\n",
-      "  Running setup.py install for pyTelegramBotAPI: started\n",
-      "  Running setup.py install for pyTelegramBotAPI: finished with status 'done'\n",
-      "Successfully installed certifi-2022.6.15 charset-normalizer-2.1.1 idna-3.3 pyTelegramBotAPI-4.7.0 requests-2.28.1 urllib3-1.26.12\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.2.1 -> 22.2.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pyTelegramBotAPI"
    ]
   }
  ],
