--- a/NotifyOs.ipynb
+++ b/NotifyOs.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Função para identificar horário e dar a saudação\n",
     "def bomdia(hour):\n",
     "    if hour >= 8 and hour < 12:\n",
     "        saud = \"Bom dia!\"\n",
@@ -30,30 +31,29 @@
     "\n",
     "                \n",
     "hora = int(time.strftime('%H', time.localtime()))\n",
-    "                \n",
+    "#chama função e executa o processo                \n",
     "if hora >= 8 or hora <= 22:\n",
     "    oi = bomdia(hora)\n",
-    "                    \n",
-    "    username = \"luiz.evangelista@se77e.com.br\"\n",
-    "    password = \"77@A7net@#L\"\n",
+    "#Dados do E-mail                    \n",
+    "    username = \"seu-email@e-mail.com.br\"\n",
+    "    password = \"sua-senha\"\n",
     "\n",
-    "\n",
-    "    tok = \"5456848966:AAGlJ8AQxKe-CgHr9qW_U48p25a8g78ErXo\"\n",
-    "    i = \"-751440787\"\n",
+    "#Dados do Bot\n",
+    "    tok = \"token-do-bot\"\n",
+    "    i = \"id-do-grupo\"\n",
     "    bot = telebot.TeleBot(tok)\n",
     "\n",
     "\n",
     "    meu_email = MailBox('plesk.se77e.com.br').login(username, password)\n",
-    "\n",
+    "#Verifica os emails e faz o envio da mensagem pelo telegram\n",
     "    lista_emails= meu_email.fetch(AND(from_=\"info@settefibra.com.br\", seen=False))\n",
     "    for msg in lista_emails:\n",
     "\n",
     "        res = msg.html\n",
     "        res = res.replace('E-mail:','\\\\nE-mail:',1)\n",
     "        tex = f\"\"\"{oi} Recebemos uma nova OS no IXC. \\n{msg.subject}\"\"\"\n",
-    "\n",
-    "        bot.send_message(i,tex)\n",
-    "        time.sleep(60)"
+    "#Envio da mensagem\n",
+    "        bot.send_message(i,tex)"
    ]
   }
  ],
@@ -73,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
