tirando informações sensíveis

--- a/NotifyOs.ipynb
+++ b/NotifyOs.ipynb
@@ -44,9 +44,9 @@
     "    bot = telebot.TeleBot(tok)\n",
     "\n",
     "\n",
-    "    meu_email = MailBox('plesk.se77e.com.br').login(username, password)\n",
+    "    meu_email = MailBox('imap.seu.e-mail').login(username, password)\n",
     "#Verifica os emails e faz o envio da mensagem pelo telegram\n",
-    "    lista_emails= meu_email.fetch(AND(from_=\"info@settefibra.com.br\", seen=False))\n",
+    "    lista_emails= meu_email.fetch(AND(from_=\"remetente_que_será_lido_o_email@email.com\", seen=False))\n",
     "    for msg in lista_emails:\n",
     "\n",
     "        res = msg.html\n",
